# rag-medical-chatbot

./: Dockerfile  Jenkinsfile  README.md  pyproject.toml  setup.py
app/: application.py
app/components/: retriever.py
custom_jenkins/: Dockerfile
