[project]
name = "rag-medical-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Norbert Lupamo",email = "91078038+lupamo3@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "huggingface-hub (>=0.33.4,<1.0.0)",
    "langchain (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-huggingface (>=1.1.0,<2.0.0)",
    "langchain-groq (>=1.1.0,<2.0.0)",
    "faiss-cpu (>=1.13.0,<2.0.0)",
    "pypdf (>=6.4.0,<7.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "langchain-classic (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
